Update 1. Introduction to ECE.md

--- a/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
+++ b/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
@@ -16,6 +16,7 @@ Since 2015 (Q4), the Bolivian National Statistics Institute (INE) carries-out th
 
 The ECE covers national, urban and rural data from nine "departmentos" (subnational level 1). Information is available at the national, household and individual level.
 
+*Table 1. Observations per year* 
 | Year	    | # of Households	| # of Individuals	|
 | :-------	| :--------		    | :--------	 	      |
 | 2015*	    | 18,354          | 69,431           |
@@ -42,24 +43,32 @@ The results are significant at national, rural, urban levels. The departments co
 ## Other Noteworthy Aspects 
 
 ### ISIC codes
-According to the INE, the Bolivian national industry classification maintains the code structure of ISIC Rev. 4 up to the third level of disaggregation. The fourth level, which INE calls  "Class category", is a modified version of ISIC and the fifth level corresponds to a "Subclass" created by the INE to ressemble statistical needs of the country (see the image below).
+According to the INE, the Bolivian national industry classification maintains the code structure of ISIC Rev. 4 up to the third level of disaggregation. The fourth level, which INE calls  "Class category", is a modified version of ISIC and the fifth level corresponds to a "Subclass" created by the INE to ressemble statistical needs of the country (see Figure 1).
 
-In the harmonization, the variable industrycate_isic file contains 4 digits. Following the description from INE, the GLD harmonization followed the industry structure up to the third level of dissagregation. The final digit is a 0 in all cases for completeness. 
+In the harmonization, the variable industrycate_isic contains 4 digits. Following the description from INE, the GLD team harmonized industry data up to the third level of dissagregation. The final digit is a 0 in all cases for completeness. 
 
-<br></br>
-![ISIC_codes](utilities/caeb.PNG)
-<br></br>
+*Figure 1. Summary of Economic Activities and Number of categories (adapted from CAEB 2011)* 
 
+| CATEGORY	| ISIC REV 3.1	| CAEB 2005 (OLD NATIONAL VERSION)	| ISIC REV 4	| CAEB 2011 (CURRENT NATIONAL VERSION)	|
+| :-------	| :--------		  | :--------	 	                       | :--------	 	      | :--------	 	      |
+| Section (Level 1)    | 17         | 17          | 21  |  21 |
+| Division (Level 2)    |  62       |     62     |  88  |  88  |
+| Group (Level 3)	    | 161        | 161    |  238  |  238   |
+| Class (Level 4)	    | 298         |  307   |    419  | 456 |
+| Sub-class	(Level 5)    | ---         | 624 |  --- |  904 |
+
+Source: the original document in spanish is accessible [here](https://www.ine.gob.bo/index.php/publicaciones/clasificacion-de-actividades-economicas-de-bolivia-caeb-2011/)
 
 
 ### ISCO codes
 The survey uses the occupation classification from Bolivia (COB 2009). The COB 2009 is a version of ISCO-08 for Bolivia with five digits. Compared to ISIC, the resemblance is not always straighforward in this case. As a result, the team mapped the ISCO-08 codes to the COB version, the outcome can be found in this [link](utilities/Classification_ISCO_COB.xlsx) in an excel file. However, the do files also contain the mapping for each year. The same explanation applies for the respective second job variable.   
 
-
+*Figure 2. ISCO codes original example of data* 
 <br></br>
 ![ISCO_codes](utilities/iscoorig.PNG)
 <br></br>
 
+*Figure 3. ISCO codes to 4 digits* 
 <br></br>
 ![ISCO_codes](utilities/isco.PNG)
 <br></br>
