Update 1. Introduction to ECE.md

--- a/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
+++ b/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
@@ -61,7 +61,7 @@ Source: the original document in spanish is accessible [here](https://www.ine.go
 
 
 ### ISCO codes
-The survey uses the occupation classification from Bolivia (COB 2009). The COB 2009 is a version of ISCO-08 for Bolivia with five digits. Compared to ISIC, the resemblance is not always straighforward in this case. As a result, the team mapped the ISCO-08 codes to the COB version, the outcome can be found in this [link](utilities/Classification_ISCO_COB.xlsx) in an excel file. However, the do files also contain the mapping for each year. The same explanation applies for the respective second job variable.   
+The survey uses the occupation classification from Bolivia (COB 2009). The COB 2009 is a national version of ISCO-08 for Bolivia with five digits. Compared to ISIC, the resemblance is not always straighforward. As a result, the team mapped the ISCO-08 codes to the COB version, the outcome can be found in this [link](utilities/Classification_ISCO_COB.xlsx) in an excel file.The GLD  do files contain the mapping for each year, in some years there may be variations with some codes present in some years and not in others. The COB documentation can be found in the following [link](utilities/).
 
 *Figure 2. ISCO codes original example of data* 
 <br></br>
