Update 1. Introduction to ECE.md

--- a/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
+++ b/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
@@ -43,9 +43,8 @@ The results are significant at national, rural, urban levels. The departments co
 ## Other Noteworthy Aspects 
 
 ### ISIC codes
-According to the INE, the Bolivian national industry classification maintains the code structure of ISIC Rev. 4 up to the third level of disaggregation. The fourth level, which INE calls  "Class category", is a modified version of ISIC and the fifth level corresponds to a "Subclass" created by the INE to ressemble statistical needs of the country (see Figure 1).
-
-In the harmonization, the variable industrycate_isic contains 4 digits. Following the description from INE, the GLD team harmonized industry data up to the third level of dissagregation. The final digit is a 0 in all cases for completeness. 
+According to the INE, the Bolivian national industry classification maintains the code structure of ISIC Rev. 4 up to the third level of disaggregation. The fourth level, which INE calls “Class category", is a modified version of ISIC and the fifth level corresponds to a "Subclass" created by the INE to resemble statistical needs of the country (see Figure 1).
+In the harmonization, the variable industrycate_isic contains 4 digits. Following the description from INE, the GLD team harmonized industry data up to the third level of disaggregation. The final digit is a 0 in all cases for completeness.
 
 *Figure 1. Summary of Economic Activities and Number of categories (adapted from CAEB 2011)* 
 
@@ -61,7 +60,10 @@ Source: the original document in spanish is accessible [here](utilities/CAEB_201
 
 
 ### ISCO codes
-The survey uses the occupation classification from Bolivia (COB 2009). The COB 2009 is a national version of ISCO-08 for Bolivia with five digits. Compared to ISIC, the resemblance is not always straighforward. As a result, the team mapped the ISCO-08 codes to the COB version, the outcome can be found in this [link](utilities/Classification_ISCO_COB.xlsx) in an excel file.The GLD  do files contain the mapping for each year, in some years there may be variations with some codes present in some years and not in others. The COB documentation can be found in the following [link](utilities/COB_2009.pdf).
+
+The survey uses the occupation classification from Bolivia (COB 2009). The COB 2009 is a national version of ISCO-08 for Bolivia with five digits. The INE decided to create the COB because of a learning process from use of previous ISCO classifications (ISCO-88). Higher level groups from COB are comparable with the ISCO-08 groups. However, at lower levels of disaggregation (digit 2, 3, 4), the INE created sections, divisions and subgroups that do not match ISCO directly. 
+
+ As a result, the team mapped the ISCO-08 codes to the COB version, the outcome can be found in this [link](utilities/Classification_ISCO_COB.xlsx) in an excel file. The GLD do files contain the mapping for each year, in some years there may be variations with some codes present in some years and not in others. The COB documentation can be found in the following [link](utilities/COB_2009.pdf).
 
 *Figure 2. ISCO codes original example of data* 
 <br></br>
