Update 1. Introduction to MNG LFS.md

--- a/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
+++ b/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
@@ -87,7 +87,7 @@ As of the time of writing (July 2023) Mongolia is composed of 21 administrative 
 
 ### Coding of industry and occupation codes
 
-Based on the questionnaires, the Mongolia LFS codifies industry and occupation based on the International Standards for Industrial Classification (ISIC) and the International Standards for Classification of Occupations (ISCO), respectively. However, there was no information on what ISIC or ISCO versions are used for each survey.  The precise details on the logic used in the mapping process are covered in separate documents for [industry](Industry.md) and [occupation](Occupation.md)
+Based on the questionnaires, the Mongolia LFS codifies industry and occupation based on the International Standards for Industrial Classification (ISIC) and the International Standards for Classification of Occupations (ISCO), respectively. However, there was no information on what ISIC or ISCO versions are used for each survey.  The precise details on the mapping process are covered in separate documents for [industry](Industry.md) and [occupation](Occupation.md)
 
 
 ### Mappings between raw and harmonized variables
