Update 1. Introduction to MNG LFS.md

--- a/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
+++ b/Support/B - Country Survey Details/MNG/LFS/1. Introduction to MNG LFS.md
@@ -87,9 +87,11 @@ As of the time of writing (July 2023) Mongolia is composed of 21 administrative 
 
 ### Coding of industry and occupation codes
 
-Based on the questionnaires, the Mongolia LFS codifies industry and occupation based on the International Standards for Industrial Classification (ISIC) and the International Standards for Classification of Occupations (ISCO), respectively. However, there was no information on what ISIC or ISCO versions are used for each survey.  The precise details on the mapping process are covered in separate documents for [industry](Industry.md) and [occupation](Occupation.md)
+Based on the questionnaires, the Mongolia LFS codifies industry and occupation based on the International Standards for Industrial Classification (ISIC) and the International Standards for Classification of Occupations (ISCO), respectively. However, there was no information on what ISIC or ISCO versions are used for each survey.  The precise details on the mapping process are covered in separate documents for [industry](Industry.md) and [occupation](Occupation.md).
 
 
 ### Mappings between raw and harmonized variables
-The mappings between the raw and harmonized variables can be found [here](Utilities/mappings_year_data.xls) for the following categorical variables: education, employment status, marital status, reasons for migration, reasons for non-participation in the labor force, sector of occupation, and relationship to household head.
+The mappings between the raw and harmonized variables can be found [here](Utilities/mappings_year_data.xls) for the following categorical variables: education, employment status, marital status, reasons for migration, reasons for non-participation in the labor force, sector of occupation, and relationship to household head. 
+
+For a more precise look at the complexities of mapping for `educat7`, refer to this separate [document](Education.md); and this [document](Employment%20Status.md) for `empstat`.
 
