Update 1. Introduction to PNAD.md

--- a/Support/B - Country Survey Details/BRA/PNAD/1. Introduction to PNAD.md
+++ b/Support/B - Country Survey Details/BRA/PNAD/1. Introduction to PNAD.md
@@ -94,7 +94,7 @@ The answers recorded for the wages of employees in the PNAD (and PNAD-C) surveys
 
 ### Coding of industry and occupation codes
 
-The PNAD codes occupation is based on the Brazilian National Occupation classification (CBO) and industry based on the National Industry classification (CNAE). Different survey editions use different iterations of the CBO and CNAE, which in turn lead to different mappings to the International Standard Classification of Occupations (ISCO) and International Standard Industrial Classification (ISIC). The details on the process of creating the correspondence between national and international classifications are covered [here in a separate document for industry classfications](Correspondence%20between%20PNAD%20industry%20classification%20and%20ISIC.md). and [here for occupation classifications](Correspondence%20between%20PNAD%20occupation%20classification%20and%20ISCO.md).
+The PNAD codes occupation is based on the Brazilian National Occupation classification (CBO) and industry based on the National Industry classification (CNAE). Different survey editions use different iterations of the CBO and CNAE, which in turn lead to different mappings to the International Standard Classification of Occupations (ISCO) and International Standard Industrial Classification (ISIC). The details on the process of creating the correspondence between national and international classifications are covered [here in a separate document for industry classfications](Correspondence%20between%20PNAD%20industry%20classification%20and%20ISIC.md). and [here for occupation classifications](Correspondence%20between%20PNAD%20occupation%20classification%20and%20ISCO.md). All relevant files can be found in the [additional data folder](utilities/Additional%20Data).
 
 The tables below show the overview of the underlying version of the national classification and what version of the international they have been matched to.
 
