Update 1. Introduction to ECE.md

--- a/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
+++ b/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
@@ -61,9 +61,9 @@ Source: the original document in spanish is accessible [here](utilities/CAEB_201
 
 ### ISCO codes
 
-The survey uses the occupation classification from Bolivia (COB 2009). The COB 2009 is a national version of ISCO-08 for Bolivia with five digits. The INE decided to create the COB because of a learning process from use of previous ISCO classifications (ISCO-88). Higher level groups from COB are comparable with the ISCO-08 groups. However, at lower levels of disaggregation (digit 2, 3, 4), the INE created sections, divisions and subgroups that do not match ISCO directly. 
+The survey uses the occupation classification from Bolivia (COB 2009). The COB 2009 is a national version of ISCO-08 for Bolivia but with five digits. The INE created the COB by learning from the use of past versions of the ISCO (ISCO-88). In the COB 2099, higher level groups from COB are comparable with the ISCO-08 groups. However, at lower levels of disaggregation (digit 2, 3, 4), the INE created sections, divisions and subgroups that do not match ISCO-08 directly. 
 
- As a result, the team mapped the ISCO-08 codes to the COB version, the outcome can be found in this [link](utilities/Classification_ISCO_COB.xlsx) in an excel file. The GLD do files contain the mapping for each year, in some years there may be variations with some codes present in some years and not in others. The COB documentation can be found in the following [link](utilities/COB_2009.pdf).
+ As a result, the GLD team mapped the ISCO-08 codes to the COB-2009 version. The outcome can be found in this [link](utilities/Classification_ISCO_COB.xlsx). The GLD do files contain the mapping for each year. However, in some years there may be variations with some codes. The COB documentation can be found in the following [link](utilities/COB_2009.pdf).
 
 *Figure 2. ISCO codes original example of data* 
 <br></br>
