Update 1. Introduction to Sierra Leone LFS.md

--- a/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
+++ b/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
@@ -58,3 +58,18 @@ The survey uses a two-stage cluster sampling methodology on a sstratified cluste
 It is designed to be representative of district populations.
 
 ## Other noteworthy aspects  
+
+### Addressing enumeration code duplication across districts/cities
+
+In the raw dataset, 4 enumeration area (EA) codes replicated in other districts/cities. Or in other words, there are cases where one same EA code appears in different districts/cities. The four replicated EA codes are shown in the screenshot below:
+
+![duplication](utilities/duplicated%20EA.png)
+
+Considering the pairs of districts being duplicated are adjacent to each other, we reasonably suppose that some people living very near the border or with high mobility between the two adjoining area might be assigned to the neighbor district whereas they deem themselves living in the other district. Therefore, following this logic, we overwrote some districts, specifically the district with fewer observations compared with the other district that contain the same EA code.
+
+| **EA Code**	| **Original District Name**	| **Changed to**	| **Cases Overwritten**	|
+| :---------------:	| :---------------:		| :------------------:	 	| :--------------:	|
+| 240203041 | 22. Kambia |  24. Port Loko | 6 |
+| 320504031 | 31. Bo | 32. Bonthe | 7 |
+| 420805102 | 41. Western Rural  | 42. Western Urban | 11 |
+| 420806142 | 41. Western Rural  | 42. Western Urban | 6  |
