Update 1. Introduction to Sri Lanka LFS.md

--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -38,7 +38,9 @@ Years and sample size of LFS harmonized for GLD are:
 
 ## What is the sampling procedure?
 
-The sampling procedure of LKA LFS is a stratified two-stage probability sample design, The primary sampling units (PSU) are census blocks; and the secondary sampling units are the housing units. Although the number of PSU selected per quarter varies through years (i.e. 252 PSUs per quarter in 1992 whereas 2250 in 2007) depending on the Census of Population and Housing in past years, the survey usually select 10 housing units per PSU per quarter. 
+The sampling procedure of LKA LFS is a stratified two-stage probability sample design, The primary sampling units (PSU) are census blocks; and the secondary sampling units are the housing units. Although the number of PSU selected per quarter varies through years (i.e. 252 PSUs per quarter in 1992 whereas 2,250 in 2007) depending on the Census of Population and Housing in past years, the survey usually select 10 housing units per PSU per quarter. 
+
+Since LKA LFS is a quarterly survey, it was conducted every three months and would take two months to conduct interview and collect data. So most of the years, except those without complete four quarters, have 8 categories of "month of interview" variable in the raw dataset: two months for each quarter and four quarters in total. Month 1 and 2 would be coded as `wave 1', for example.
 
 ## What is the geographic significance level?
 
