Update CSD for BOL

--- a/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
+++ b/Support/B - Country Survey Details/BOL/1. Introduction to ECE.md
@@ -1,4 +1,4 @@
-Introduction to the Bolivian Continuous Employment Survey (ECE) 
+Introduction to the Bolivian Encuesta Continua de Empleo (ECE) 
 ================
 
 - [What is the BOL ECE?](#what-is-the-bol-ece)
@@ -10,7 +10,7 @@ Introduction to the Bolivian Continuous Employment Survey (ECE)
 
 ## What is the BOL ECE?
 
-Since 2015 (Q4), the Bolivian National Statistics Institute (INE) carries-out the ECE. The survey goal is to collect national data to develop better labour indicators. The ECE gathers national, rural and urban data for unemployment, labour supply, and migration. 
+Since 2015 (Q4), the Bolivian National Statistics Institute (Instituto Nacional de Estadística - INE) carries out the ECE (*Continuous Employment Survey* in English). The survey goal is to collect national data to develop better labour indicators. The ECE gathers national as well as rural and urban data for unemployment, labour supply, and migration. 
 
 ## What does the BOL ECE cover?
 
@@ -30,11 +30,13 @@ The ECE covers national, urban and rural data from nine "departmentos" (subnatio
   
 ## Where can the data be found?
 
-The microdata is free and publicly available on the [INE website](https://www.ine.gob.bo/index.php/censos-y-banco-de-datos/censos/bases-de-datos-encuestas-sociales/).
+The microdata is free and publicly available on the [INE website](https://www.ine.gob.bo/index.php/metadatos-y-microdatos/).
 
 ## What is the sampling procedure?
 
-The sampling procedure is two stage probabilistic, stratified, by conglomerate. In the first step, the NSO selects the probabilitic measure unit (UPM), the selection process is proportional to the number of households in the UPM. The second step is to select the households inside the selected UPM, the selection process is aleatory and systematic. 
+The sampling follows a stratified two stage procedure. In the first step, the NSO selects the primary sampling units (PSU - called *conglomerados*) based on the census areas. These PSUs are stratified by geographic area (urban or rural) and socio-economic strata (low or high). Urban areas are thos with more than 2000 inhabitants, while the socio-economic categories are based on the census results (latest census used at the time of writing is the 2012 census). In the second step the INE selects the households inside the selected UPM, the selection process is aleatory and systematic. 
+
+The survey also contains a panel element. Urban areas have a quarterly 25% sample rotation panel. This means that every three months a quarter of the urban sample households is replaced. Every urban household is in the survey at most for four consecutive quarters. Rural areas are anew every quarter. The GLD variable `panel` allows users to identify the observations belonging to the different (urban) panels.
 
 ## What is the geographic significance level?
 
@@ -43,10 +45,10 @@ The results are significant at national, rural, urban levels. The departments co
 ## Other Noteworthy Aspects  
 
 ### ISIC codes
-According to the INE, the Bolivian national industry classification maintains the code structure of ISIC Rev. 4 up to the third level of disaggregation. The fourth level, which INE calls “Class category", is a modified version of ISIC and the fifth level corresponds to a "Subclass" created by the INE to resemble statistical needs of the country (see Figure 1).
-In the harmonization, the variable industrycate_isic contains 4 digits. Following the description from INE, the GLD team harmonized industry data up to the third level of disaggregation. The final digit is a 0 in all cases for completeness.
 
-*Figure 1. Summary of Economic Activities and Number of categories (adapted from CAEB 2011)* 
+Information on the industry is classified using the national classification (CAEB - Clasificación de actividades económicas de Bolivia). As per the CAEB 2011 (original document [here](utilities/CAEB_2011.pdf)) the Bolivian industry classification maintains the code structure of ISIC Rev. 4 up to the third level of disaggregation. The fourth level, which INE calls “Class category", is a modified version of ISIC and the fifth level (which does not exist in ISIC) corresponds to a "Subclass" created by the INE to resemble statistical needs of the country (see Table 1, below).
+
+**Table 1. Summary of Economic Activities and Number of categories (adapted from CAEB 2011)**
 
 | CATEGORY	| ISIC REV 3.1	| CAEB 2005 (OLD NATIONAL VERSION)	| ISIC REV 4	| CAEB 2011 (CURRENT NATIONAL VERSION)	|
 | :-------	| :--------		  | :--------	 	                       | :--------	 	      | :--------	 	      |
@@ -56,22 +58,15 @@ In the harmonization, the variable industrycate_isic contains 4 digits. Followin
 | Class (Level 4)	    | 298         |  307   |    419  | 456 |
 | Sub-class	(Level 5)    | ---         | 624 |  --- |  904 |
 
-Source: the original document in spanish is accessible [here](utilities/CAEB_2011.pdf)
+In the harmonization, the variable industrycate_isic contains 4 digits. Following the description from INE, the GLD team harmonized industry data up to the third level of disaggregation. To ensure the variable `industrycat_isic` is a string of four characters length a "0" is used on the righ-hand side to pad the number for completeness.
 
 
 ### ISCO codes
 
-The survey uses the occupation classification from Bolivia (COB 2009). The COB 2009 is a national version of ISCO-08 for Bolivia but with five digits. The INE created the COB by learning from the use of past versions of the ISCO (ISCO-88). In the COB 2099, higher level groups from COB are comparable with the ISCO-08 groups. However, at lower levels of disaggregation (digit 2, 3, 4), the INE created sections, divisions and subgroups that do not match ISCO-08 directly. 
+The survey uses the occupation classification from Bolivia (COB 2009, Clasificación de Ocupaciones de Bolivia). The COB 2009 is a national version of ISCO-08 for Bolivia but with five digits. In the COB 2009, higher level groups from COB are comparable with the ISCO-08 groups. However, at lower levels of disaggregation (digit 2, 3, 4), the INE created sections, divisions and subgroups that do not match ISCO-08 directly. 
 
- As a result, the GLD team mapped the ISCO-08 codes to the COB-2009 version. The outcome can be found in this [link](utilities/Classification_ISCO_COB.xlsx). The GLD do files contain the mapping for each year. However, in some years there may be variations with some codes. The COB documentation can be found in the following [link](utilities/COB_2009.pdf).
+As a result, the GLD team mapped the COB 2009 codes to ISCO-08 to provide internationally comparable codes in variable `occup_isco`. The mapping is not only in the harmonization code (e.g., `occup_isco == XYZ if original_occ_class == YZX`) but also detailed in [this spreadsheet for review](utilities/Classification_ISCO_COB.xlsx). The COB 2009 documentation can be found [here](utilities/COB_2009.pdf).
 
-*Figure 2. ISCO codes original example of data* 
-<br></br>
-![ISCO_codes](utilities/iscoorig.PNG)
-<br></br>
+### Effects of the Covid-19 Pandemic
 
-*Figure 3. ISCO codes to 4 digits* 
-<br></br>
-![ISCO_codes](utilities/isco.PNG)
-<br></br>
-
+The Covid-19 pandemic and the national quarantine disrupted the survey. In particular, during 2020 the survey switched from in-person interviews to phone and other telematic forms of communication to process the survey. Additionally, the rotating panel was moved to a fixed panel (e.g., new households stopped being switched for old ones and those in the survey stayed on for longer). Moreover, the repsonse rate fell. More details on the effects of the pandemic can be found in [this note from the INE](utilities/NT_ECE02_2020.pdf). As a consequence, the surveys from 2020 were not harmonized.
