Update 1. Introduction to Sri Lanka LFS.md

--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -44,7 +44,10 @@ Since LKA LFS is a quarterly survey, it was conducted every three months and wou
 
 ## What is the geographic significance level?
 
-The LKA LFS is siginificant at the district level.
+The LKA LFS is representative at the urban/rural division of each district level. 
+
+Note that in the raw data the `sector` variable originally has three categories: urban, rural, and estate. An estate sector in Sri Lanka is actually a plantation sector. An estate sector consists of all plantations which are 20 acres or more
+in extent and ten or more resident labourers. All areas other than urban and estate comprise the rural sector (_Sinnathurai, V., Březinová, O., 2012_).
 
 
 ## Other noteworthy aspects  
