--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -47,7 +47,7 @@ Since LKA LFS is a quarterly survey, it was conducted every three months and wou
 The LKA LFS is representative at the urban/rural division of each district level. 
 
 Note that in the raw data the `sector` variable originally has three categories: urban, rural, and estate. An estate sector in Sri Lanka is actually a plantation sector. An estate sector consists of all plantations which are 20 acres or more
-in extent and ten or more resident labourers. All areas other than urban and estate comprise the rural sector (_Sinnathurai, V., Březinová, O., 2012_).
+in extent and ten or more resident labourers. All areas other than urban and estate comprise the rural sector (_Sinnathurai, V., Březinová, O., 2012_). We classified estate as rural in our harmonization, considering the level of poverty, development, population and housing factors.  
 
 
 ## Other noteworthy aspects  
