Update 1. Introduction to Ethiopian LFS.md

--- a/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
+++ b/Support/B - Country Survey Details/ETH/LFS/1. Introduction to Ethiopian LFS.md
@@ -39,7 +39,7 @@ The microdata of ETH LFS are unfortunately not publicly available. All data are 
 
 The sampling procedure is a mixture of two-stage cluster and three-stage cluster sample design. Firstly, the whole country is divided into three broad categories: *rural*, *major urban centers*, and *other urban centers*. For category 1-rural and category 2-major urban areas, a stratified two-stage cluster sample design was used, which selects primary sampling units (PSU: enumeration areas) and secondary sampling units (SSU: households). But for other urban centers, a stratified three-stage cluster sample design was adopted. The PSUs are urban centers follwed by enumeration areas (EA) as SSUs and last but not least, households. For all four years. ETH LFS are representative at urban/rural parts of region level. 
 
-More details of the sampling frame & procedure are included in each year's annual report. Here is an example of [LFS 2013](utilities/nlfs_analytical_report labor_force_2013.pdf) (page 19/20 of the PDF):
+More details of the sampling frame & procedure are included in each year's annual report. Here is an example of [LFS 2013](utilities/nlfs_analytical_report_labor_force_2013.pdf) (page 19/20 of the PDF):
 
 ```
 For the purpose of the survey the country was divided into three broad categories. That is; rural, major urban center and other urban center categories.
