Update 1. Introduction to Sri Lanka LFS.md

--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -54,6 +54,13 @@ in extent and ten or more resident labourers. All areas other than urban and est
 
 ## Other noteworthy aspects  
 
+### Changes in survey structure throughout the years
+
+1992-2004 Two reference periods
+2006-     Only one reference period, the past 7-day reference period; literacy added whereas training information removed 
+
+
+
 ### Coding of industry and occupation codes
 
 
