Update 1. Introduction to Sierra Leone LFS.md

--- a/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
+++ b/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
@@ -73,3 +73,11 @@ Considering the pairs of districts being duplicated are adjacent to each other, 
 | 320504031 | 31. Bo | 32. Bonthe | 7 |
 | 420805102 | 41. Western Rural  | 42. Western Urban | 11 |
 | 420806142 | 41. Western Rural  | 42. Western Urban | 6  |
+
+### Missing Strata
+
+Strata in SLE, instead of being district as most of the case in other countries, is part of the sampling design and more of the rural-urban/peri-urban divide. Furthermore, the stratum should be unique within a district or region in the case of SLE. However, the variable named "stratum" in the raw dataset, has overlapping stratum codes between regions and districts. Hence we did not code strata.
+
+### Household Weight
+
+The original variable in the raw dataset, `wt_hh`, used for harmonization has been aggregated for unknown reason, leaving it with only 28 unique values. So we used the household weight in a separate datafile[utilities/Additional%20Data/weights.dta] by merging it to the main raw datafile at the begining. 
