Update 1. Introduction to Sierra Leone LFS.md

--- a/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
+++ b/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
@@ -80,4 +80,4 @@ Strata in SLE, instead of being district as most of the case in other countries,
 
 ### Household Weight
 
-The original variable in the raw dataset, `wt_hh`, used for harmonization has been aggregated for unknown reason, leaving it with only 28 unique values. So we used the household weight in a [separate datafile](utilities/Additional%20Data/weights.dta) by merging it to the main raw datafile at the begining. 
+The original variable in the raw dataset, `wt_hh`, used for harmonization has been aggregated for unknown reason, leaving it with only 28 unique values. Household weights should be unique within each enueration area. In this case, we used the household weight in a [separate datafile](utilities/Additional%20Data/weights.dta), which has 280 unique values, by merging it to the main raw datafile at the begining. 
