Update 1. Introduction to Sierra Leone LFS.md

--- a/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
+++ b/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
@@ -81,3 +81,14 @@ Strata in SLE, instead of being district as most of the case in other countries,
 ### Household Weight
 
 The original variable in the raw dataset, `wt_hh`, used for harmonization has been aggregated for unknown reason, leaving it with only 28 unique values. Household weights should be unique within each enueration area. In this case, we used the household weight in a [separate datafile](utilities/Additional%20Data/weights.dta), which has 280 unique values, by merging it to the main raw datafile at the begining. 
+
+### Wage Analysis Against Age
+
+Our single-year quality check result of SLE 2014 shows that the relationship between wage and age does not conform with general expectation: the income increases as age increases from young adult stage to senior stage before retiring; and income falls as age grows into retiring stage. 
+
+![SLE_wage_analysis](utilities/SLE_wage_analysis.png)
+
+A closer look at the data reveals that this is caused by a very small sample size (observations of 7) with above-average income. These observations' occupations, such as professors, or law-makers of professionals, do not follow the general rule of wage-age relationship. And their high average income pulls the wage of retirees up, which leads to the red flag of wage analysis. 
+
+![SLE_wage_analysis_data](utilities/SLE_wage_analysis_data.png)
+![SLE_retiree_wage](utilities/retiree_wage.png)
