--- a/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
+++ b/Support/B - Country Survey Details/LKA/LFS/1. Introduction to Sri Lanka LFS.md
@@ -34,9 +34,12 @@ Years and sample size of LFS harmonized for GLD are:
 | 2004 | 22,578        | 93,251      |  19,921,445  |      |    |
 | 2006 | 17,208        | 68,931      |  17,630,294  |   18,200   | 14,833,802   |
 | 2007 | 17,055        | 68,189      |  15,045,605  |   22,500*   | 15,047,882   |
-| 2008 | 18,596        | 73,489      |  16,327,367  |   20,260*   | 16,319,065   |
-| 2011 | 14,414        | 56,191      |  17,909,455  |   17,620*   | 16,319,065   |
-| 2012 | 14,414        | 56,191      |  17,909,455  |   19,420*   | 17,915,383   |
+| 2008 | 18,596        | 73,489      |  16,327,367  |   20,260   | 16,319,065   |
+| 2011 | 14,414        | 56,191      |  17,909,455  |   17,620   | 16,319,065   |
+| 2012 | 16,336        | 62,298      |  17,915,383  |   19,420   | 17,915,383   |
+| 2013 | 16,336        | 62,298      |  17,915,383  |   25,000   | 16,359,761**   |
+
+**15 years and above
 
 ## Where can the data be found?
 
