Update 1. Introduction to Sierra Leone LFS.md

--- a/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
+++ b/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
@@ -80,7 +80,7 @@ Strata in SLE, instead of being district as most of the case in other countries,
 
 ### Household Weight - Two Different Weighting Variables
 
-In a [separate datafile](utilities/Additional%20Data/weights.dta), the variable `wt_hh' has 280 unique values (the one we finally used for harmonization) whereas the original variable in the raw dataset has only 28. The weight with only 28 values may been somehow aggregated with a reason unkown to us. We used the `wt_hh' in the separate weight file by merging it to the main raw datafile at the begining. The main reason is that using it yields a much closer estimate of working age population (WAP) compared to SLE's national report. Using the other will yield a far fewer estimate. In the national report, the working age population (WAP, aged 15 to 64) is 3,009,472.
+In a [separate datafile](utilities/Additional%20Data/weights.dta), the variable `wt_hh` has 280 unique values (the one we finally used for harmonization) whereas the original variable in the raw dataset has only 28. The weight with only 28 values may been somehow aggregated with a reason unkown to us. We used the `wt_hh` in the separate weight file by merging it to the main raw datafile at the begining. The main reason is that using it yields a much closer estimate of working age population (WAP) compared to SLE's national report. Using the other will yield a far fewer estimate. In the national report, the working age population (WAP, aged 15 to 64) is 3,009,472.
 
 ![WAP_report](utilities/reportWAP.png)
 
