--- a/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
+++ b/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
@@ -80,7 +80,7 @@ Strata in SLE, instead of being district as most of the case in other countries,
 
 ### Household Weight - Two Different Weighting Variables
 
-In a [separate datafile](utilities/Additional%20Data/weights.dta), the variable `wt_hh` has 280 unique values (the one we finally used for harmonization) whereas the original variable in the raw dataset has only 28. The weight with only 28 values may been somehow aggregated with a reason unkown to us. We used the `wt_hh` in the separate weight file by merging it to the main raw datafile at the begining. The main reason is that using it yields a much closer estimate of working age population (WAP) compared to SLE's national report. Using the other will yield a far fewer estimate. In the national report, the working age population (WAP, aged 15 to 64) is 3,009,472.
+In a [separate datafile](utilities/Additional%20Data/weights.dta), the variable `wt_hh` has 280 unique values (the one we finally used for harmonization) whereas the original variable in the raw dataset has only 28. The weight with only 28 values may been somehow aggregated with a reason unkown to us. We used the `wt_hh` in the separate weight file by merging it to the main raw datafile at the begining. The main reason is that using it yields a much closer estimate of working age population (WAP) compared to SLE's national report. Using the other will yield a far fewer estimate. In the national report, the WAP (aged 15 to 64) is **3,009,472**.
 
 ![WAP_report](utilities/reportWAP.png)
 
@@ -91,6 +91,22 @@ To compare, here are WAP of using 28-value and 280-value weights respectively.
 ![280value](utilities/wap_weight280.png)
 
 Though our final estimate of WAP is a bit higher than the report, it reflects objectively what the dataset provides, using the correct weight. And also note that these are results after applying an eligibility condition, which shall be explained in the next point. 
+
+### Eligibility Variable
+
+As the comments in the scripts explain, `A17_corrected` was created following the questionnaire's rules and it shows that 20.6% of the sample size are not eligible for the survey. These observations are in fact not interviewed, as they do not have values for variables after `A17`. Yet we still chose to have them in the final result, considering dropping them will decrease the sample size and population estimate. In addition, because they have some demographic information like age and gender. One possible cause or explanation of the small sample size and large proportion of ineligible respondents may be the Ebola crisis. The outbreak started in March 2014 and lasted through the whole year. Considering the data collection is from June to August, it seems possible that the outbreak had impacts on data collection.
+
+![codes](utilities/SLE_scripts.png)
+
+![eligibility](utilities/eligibility.png)
+
+However, these observations should be excluded from labor force/WAP. The two results shown in the previous section both exclude these ineligible observations. Below are their counterparts that include these observations, with the first one being 28-value weight. Surprisingly, the number **2,801,698** is exactly the same WAP provided by ILO. So we assumed that perhaps ILO used the wrong weight and included the ineligible observations, or some other institution did it this way and reported to ILO.
+
+![28value_ineligible](utilities/wap_weight28_incl_ineligible.png)
+
+![280value_ineligibile](utilities/wap_weight280_incl_ineligible.png)
+
+![ILO_WAP](utilities/ILO.png)
 
 ### Wage Analysis Against Age
 
