--- a/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
+++ b/Support/B - Country Survey Details/SLE/LFS/1. Introduction to Sierra Leone LFS.md
@@ -1,5 +1,5 @@
 
-# Introduction to Sierra Leone (SLE) national Labor Force Survey (LFS)
+# Introduction to Sierra Leone (SLE) national Labour Force Survey (LFS)
 
 - [What is the SLE LFS](#what-is-the-sle-lfs)
 - [What does the SLE LFS cover?](#what-does-the-sle-lfs-cover)
@@ -10,7 +10,7 @@
 
 ## What is the SLE LFS?
 
-The 2014 SLE LFS is the first labor force survey in the country since 1984. Before SLE LFS 2014, the 2004 and 2011 country integrated household survey were the main source of information on labor market and employment. SLE LFS 2014 was conducted by the Statistics Sierra Leone (SSL), with the support of the World Bank, the International Labor Organization, and the Deutsche Gesellschaft für Internationale Zusammenarbeit. The survey data was collected between July and August 2014 and is nationally representative. 
+The 2014 SLE LFS is the first labor force survey in the country since 1984. Before SLE LFS 2014, the 2004 and 2011 country integrated household survey were the main source of information on labor market and employment. SLE LFS 2014 was conducted by the Statistics Sierra Leone (SSL), with the support of the World Bank, the International Labour Organization, and the Deutsche Gesellschaft für Internationale Zusammenarbeit. The survey data was collected between July and August 2014 and is nationally representative. 
 
 
 ## What does the SLE LFS cover?
@@ -34,8 +34,8 @@ Below is a table showing districts and cities in the report vs. in the data:
 | Tonkolili District| YES | 12 | YES | 12 | NA |
 | Bo City           | YES | 14 | YES | 29 | Bo city and district are combined as one in the data.|
 | Bo District       | YES | 14 | YES | -  | See Bo City. |
-|Bonthe Municipality| YES | 6  | YES | 18 | Bonthe Mnucipality and district are combined as one in the data.|
-| Bonthe District   | YES | 12 | YES | -  | See Bonthe Mnucipality. |
+|Bonthe Municipality| YES | 6  | YES | 18 | Bonthe Municipality and district are combined as one in the data.|
+| Bonthe District   | YES | 12 | YES | -  | See Bonthe Municipality. |
 | Moyamba District  | YES | 12 | YES | 12 | NA |
 | Pujehun District  | YES | 12 | YES | 12 | NA |
 | Freetown City     | YES | 50 | YES | 51 | Called "Western Urban" in the data.|
@@ -43,15 +43,15 @@ Below is a table showing districts and cities in the report vs. in the data:
 
 ## Where can the data be found?
 
-The Microdata is freely available on the public [World Bank microdata library](https://microdata.worldbank.org/index.php/catalog/2687). The data and relevant documents are availabel from the [SSL website](http://www.statistics.sl/index.php/what-we-offer/open-data-free-datasets.html). 
+The Microdata is freely available on the public [World Bank microdata library](https://microdata.worldbank.org/index.php/catalog/2687). The data and relevant documents are available from the [SSL website](http://www.statistics.sl/index.php/what-we-offer/open-data-free-datasets.html). 
 
 ## What is the sampling procedure?
 
-The survey uses a two-stage cluster sampling methodology on a sstratified cluster sample with oversampling in urban areas for non-response. 280 enumeration areas are selected from four regions which contain 19 districts or cities plus Western region as a whole, with 15 households randomly selected in each for a total 4,200 (4,199 in the data eventually) households as planned. SSL conducted the sampling using the 2004 Population and Housing Census as the sampling frame. The sample size was calculated using the formula below:
+The survey uses a two-stage cluster sampling methodology on a stratified cluster sample with oversampling in urban areas for non-response. 280 enumeration areas are selected from four regions which contain 19 districts or cities plus Western region as a whole, with 15 households randomly selected in each for a total 4,200 (4,199 in the data eventually) households as planned. SSL conducted the sampling using the 2004 Population and Housing Census as the sampling frame. The sample size was calculated using the formula below:
 
 ![formula](utilities/sampling_formula.png)
 
-(*NOTE:The target number of households in the sample, i.e. the sample size, was thus estimated at 4,200, based on the computed value of 4296 rounded down to 4200 for ease of use and due to budget constraints.*)
+(*NOTE: The target number of households in the sample, i.e. the sample size, was thus estimated at 4,200, based on the computed value of 4296 rounded down to 4200 for ease of use and due to budget constraints.*)
 
 ## What is the geographic significance level?
 
@@ -76,11 +76,11 @@ Considering the pairs of districts being duplicated are adjacent to each other, 
 
 ### Missing Strata
 
-Strata in SLE, instead of being district as most of the case in other countries, is part of the sampling design and more of the rural-urban/peri-urban divide. Furthermore, the stratum should be unique within a district or region in the case of SLE. However, the variable named "stratum" in the raw dataset, has overlapping stratum codes between regions and districts. Hence we did not code strata.
+Strata in SLE, instead of being district as most of the case in other countries, is part of the sampling design and more of the rural-urban/peri-urban divide. Furthermore, the stratum should be unique within a district or region in the case of SLE. However, the variable named "stratum" in the raw dataset, has overlapping stratum codes between regions and districts. Hence, we did not code strata.
 
 ### Household Weight - Two Different Weighting Variables
 
-In a [separate datafile](utilities/Additional%20Data/weights.dta), the variable `wt_hh` has 280 unique values (the one we finally used for harmonization) whereas the original variable in the raw dataset has only 28. The weight with only 28 values may been somehow aggregated with a reason unkown to us. We used the `wt_hh` in the separate weight file by merging it to the main raw datafile at the begining. The main reason is that using it yields a much closer estimate of working age population (WAP) compared to SLE's national report. Using the other will yield a far fewer estimate. In the national report, the WAP (aged 15 to 64) is **3,009,472**.
+In a [separate datafile](utilities/Additional%20Data/weights.dta), the variable `wt_hh` has 280 unique values (the one we finally used for harmonization) whereas the original variable in the raw dataset has only 28. The weight with only 28 values may been somehow aggregated with a reason unknown to us. We used the `wt_hh` in the separate weight file by merging it to the main raw datafile at the beginning. The main reason is that using it yields a much closer estimate of working age population (WAP) compared to SLE's national report. Using the other will yield a far fewer estimate. In the national report, the WAP (aged 15 to 64) is **3,009,472**.
 
 ![WAP_report](utilities/reportWAP.png)
 
@@ -92,21 +92,31 @@ To compare, here are WAP of using 28-value and 280-value weights respectively.
 
 Though our final estimate of WAP is a bit higher than the report, it reflects objectively what the dataset provides, using the correct weight. And also note that these are results after applying an eligibility condition, which shall be explained in the next point. 
 
+### Difference with ILO Data
+
+The choice of weight variable also showed up in the quality checks, when comparing with ILO data. Below are the results from ILOSTAT:
+
+![ILO_WAP](utilities/ILO.png)
+
+The population aged 15 and above (and their labor status) is in line with the data if the “simplified” 28 values weights are used:
+
+![28value_ineligible](utilities/wap_weight28_incl_ineligible.png)
+
+If the more detailed weights are used (as in the GLD harmonization) the ratios stay roughly the same but the absolute numbers increase:
+
+![280value_ineligibile](utilities/wap_weight280_incl_ineligible.png)
+
+The GLD data is thus different to the ILO published data yet we believe it to be containing the correct information.
+
 ### Eligibility Variable
 
-As the comments in the scripts explain, `A17_corrected` was created following the questionnaire's rules and it shows that 20.6% of the sample size are not eligible for the survey. These observations are in fact not interviewed, as they do not have values for variables after `A17`. Yet we still chose to have them in the final result, considering dropping them will decrease the sample size and population estimate. In addition, because they have some demographic information like age and gender. One possible cause or explanation of the small sample size and large proportion of ineligible respondents may be the Ebola crisis. The outbreak started in March 2014 and lasted through the whole year. Considering the data collection is from June to August, it seems possible that the outbreak had impacts on data collection.
+As the comments in the scripts explain, `A17_corrected` was created following the questionnaire's rules and it shows that 20.6% of the sample size are not eligible for the survey. These observations are in fact not interviewed, as they do not have values for variables after `A17`. The eligibility in `A17` is related to variable `A_16`. The SLE LFS required in 2014 that each individual spend 4 nights each week in the household over the previous four weeks in order to be thought of as a LFS eligible.
+
+In the GLD harmonization all responses are kept. They can be used to calculate the total population and have responses to demographic variables (e.g., sex, age) but have missing values for the rest of the individual responses.
 
 ![codes](utilities/SLE_scripts.png)
 
 ![eligibility](utilities/eligibility.png)
-
-However, these observations should be excluded from labor force/WAP. The two results shown in the previous section both exclude these ineligible observations. Below are their counterparts that include these observations, with the first one being 28-value weight. Surprisingly, the number **2,801,698** is exactly the same WAP provided by ILO. So we assumed that perhaps ILO used the wrong weight and included the ineligible observations, or some other institution did it this way and reported to ILO.
-
-![28value_ineligible](utilities/wap_weight28_incl_ineligible.png)
-
-![280value_ineligibile](utilities/wap_weight280_incl_ineligible.png)
-
-![ILO_WAP](utilities/ILO.png)
 
 ### Wage Analysis Against Age
 
